--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@mdx-js/react": "^2.1.3",
+    "@popperjs/core": "^2.6.0",
     "babel-plugin-styled-components": "^2.0.7",
+    "bootstrap": "^5.0.0-beta1",
     "gatsby": "^4.20.0",
     "gatsby-plugin-image": "^2.20.0",
     "gatsby-plugin-manifest": "^4.20.0",
