--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@mdx-js/react": "^2.1.3",
     "@popperjs/core": "^2.6.0",
     "babel-plugin-styled-components": "^2.0.7",
-    "bootstrap": "^5.0.0-beta1",
+    "bootstrap": "^5.2.1",
     "gatsby": "^4.20.0",
     "gatsby-plugin-image": "^2.20.0",
     "gatsby-plugin-manifest": "^4.20.0",
@@ -20,6 +20,7 @@
     "gatsby-transformer-sharp": "^4.20.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "sass": "^1.54.8",
