--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "@popperjs/core": "^2.6.0",
     "babel-plugin-styled-components": "^2.0.7",
     "bootstrap": "^5.2.1",
-    "gatsby": "^4.20.0",
+    "gatsby": "^4.21.0",
     "gatsby-plugin-image": "^2.20.0",
     "gatsby-plugin-manifest": "^4.20.0",
-    "gatsby-plugin-mdx": "^4.1.0",
+    "gatsby-plugin-mdx": "^4.2.0",
     "gatsby-plugin-sass": "^5.22.0",
-    "gatsby-plugin-sharp": "^4.20.0",
+    "gatsby-plugin-sharp": "^4.23.0",
     "gatsby-plugin-styled-components": "^5.22.0",
+    "gatsby-remark-images": "^6.23.0",
     "gatsby-source-filesystem": "^4.20.0",
+    "gatsby-transformer-remark": "^5.23.0",
     "gatsby-transformer-sharp": "^4.20.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
