--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "babel-plugin-styled-components": "^2.0.7",
     "bootstrap": "^5.2.1",
     "gatsby": "^4.21.0",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-image": "^2.20.0",
     "gatsby-plugin-manifest": "^4.20.0",
     "gatsby-plugin-mdx": "^4.2.0",
-    "gatsby-plugin-sass": "^5.22.0",
+    "gatsby-plugin-sass": "^5.23.0",
     "gatsby-plugin-sharp": "^4.23.0",
     "gatsby-plugin-styled-components": "^5.22.0",
     "gatsby-remark-images": "^6.23.0",
@@ -25,7 +26,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
-    "sass": "^1.54.8",
+    "sass": "^1.55.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
