--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-plugin-styled-components": "^2.0.7",
     "bootstrap": "^5.2.1",
     "gatsby": "^4.21.0",
+    "gatsby-cli": "^4.23.1",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-image": "^2.20.0",
     "gatsby-plugin-manifest": "^4.20.0",
