--- a/package.json
+++ b/package.json
@@ -1,56 +1,36 @@
 {
   "name": "manon-bricole",
+  "version": "0.0.0",
   "private": false,
   "description": "Manon's personal home page",
-  "version": "0.0.0",
   "author": "Manon FOUQUET <ms.manonfouquet@gmail.com>",
   "dependencies": {
-    "@mdx-js/react": "^2.1.3",
-    "@popperjs/core": "^2.6.0",
     "babel-plugin-styled-components": "^2.0.7",
     "bootstrap": "^5.2.1",
-    "gatsby": "^4.21.0",
-    "gatsby-cli": "^4.23.1",
-    "gatsby-plugin-image": "^2.20.0",
-    "gatsby-plugin-manifest": "^4.20.0",
-    "gatsby-plugin-mdx": "^4.2.0",
-    "gatsby-plugin-sass": "^5.23.0",
-    "gatsby-plugin-sharp": "^4.23.0",
-    "gatsby-plugin-styled-components": "^5.22.0",
-    "gatsby-remark-images": "^6.23.0",
-    "gatsby-source-filesystem": "^4.20.0",
-    "gatsby-transformer-remark": "^5.23.0",
-    "gatsby-transformer-sharp": "^4.23.0",
-    "prop-types": "^15.8.1",
+    "gatsby": "^4.23.1",
+    "gatsby-plugin-image": "^2.23.1",
+    "gatsby-plugin-postcss": "^5.23.0",
+    "gatsby-plugin-sass": "^5.23.1",
+    "gatsby-plugin-sharp": "^4.23.1",
+    "gatsby-plugin-styled-components": "^5.23.0",
+    "gatsby-remark-images": "^6.23.1",
+    "gatsby-source-filesystem": "^4.23.0",
+    "gatsby-transformer-remark": "^5.23.1",
+    "gatsby-transformer-sharp": "^4.23.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.1.0",
-    "react-helmet": "^6.1.0",
     "react-multiline-clamp": "^2.0.0",
-    "sass": "^1.55.0",
     "styled-components": "^5.3.5"
-  },
-  "devDependencies": {
-    "prettier": "^2.7.1"
   },
   "keywords": [
     "gatsby"
   ],
-  "license": "0BSD",
   "scripts": {
-    "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
     "start": "gatsby develop",
+    "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Manon-Fouquet/manon-bricole-website"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "clean": "gatsby clean"
   }
 }
