first version of visit card with gfonts and fontawesome

--- a/package.json
+++ b/package.json
@@ -5,9 +5,16 @@
   "description": "Manon's personal home page",
   "author": "Manon FOUQUET <ms.manonfouquet@gmail.com>",
   "dependencies": {
+    "@fontsource/lato": "^4.5.9",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "babel-plugin-styled-components": "^2.0.7",
     "bootstrap": "^5.2.1",
     "gatsby": "^4.23.1",
+    "gatsby-omni-font-loader": "^2.0.2",
+    "gatsby-plugin-fontawesome-css": "^1.2.0",
     "gatsby-plugin-image": "^2.23.1",
     "gatsby-plugin-postcss": "^5.23.0",
     "gatsby-plugin-sass": "^5.23.1",
