--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby": "^4.23.1",
     "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-image": "^2.23.1",
+    "gatsby-plugin-manifest": "^4.23.1",
     "gatsby-plugin-postcss": "^5.23.0",
     "gatsby-plugin-sass": "^5.23.1",
     "gatsby-plugin-sharp": "^4.23.1",
